my accounts css

--- a/src/app/account/account.component.css
+++ b/src/app/account/account.component.css
@@ -1,7 +1,8 @@
 .accountTable
 {
-  width: 75%; 
+  width: 100%; 
   margin:0 auto;
    border-bottom: 1px solid #000; 
    font-size:2vw;
+   background-color:whitesmoke;
 }
