--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -6,15 +6,15 @@
         </mat-panel-title>
       </mat-expansion-panel-header>
         <div class="button-row-a">
-        <a mat-raised-button routerLink="/accounts" style="width : 100%">My Account</a>
+        <a mat-raised-button routerLink="/accounts" style="width : 100%; background-color:rgb(233,167,119);">My Account</a>
         <br>
-        <a mat-raised-button routerLink='/transfer' style="width : 100%">Transfer</a>
+        <a mat-raised-button routerLink='/transfer' style="width : 100%; background-color:rgb(233,167,119);">Transfer</a>
         <br>
-        <a mat-raised-button routerLink="." style="width : 100%">Settings</a>
+        <a mat-raised-button routerLink="." style="width : 100%; background-color:rgb(233,167,119);">Settings</a>
         <br>
-         <a mat-raised-button routerLink="." style="width : 100%">Contact Support</a>
+         <a mat-raised-button routerLink="." style="width : 100%; background-color:rgb(233,167,119);">Contact Support</a>
         <br>
-        <a mat-raised-button routerLink="/login" style="width : 100%">Logout</a>
+        <a mat-raised-button routerLink="/login" style="width : 100%; background-color:rgb(233,167,119);">Logout</a>
         </div>
     </mat-expansion-panel>
 </mat-accordion>
