nice looking navbar
yes

--- a/src/app/my-account/my-account.component.html
+++ b/src/app/my-account/my-account.component.html
@@ -1,7 +1,7 @@
 
 
 <mat-sidenav-container fullscreen>    
-        <mat-sidenav mode="side" opened>
+        <mat-sidenav mode="side" opened style= "background-color:rgb(186,213,171)">
            <app-navbar></app-navbar>
         </mat-sidenav>
 
