--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <mat-accordion>
-    <mat-expansion-panel>
+    <mat-expansion-panel style= "background-color:rgb(186,213,171)">
       <mat-expansion-panel-header>
         <mat-panel-title>
          Menu Options
