--- a/src/app/transfer/transfer.component.html
+++ b/src/app/transfer/transfer.component.html
@@ -1,6 +1,6 @@
 <div class="container">
 <mat-sidenav-container fullscreen>
-        <mat-sidenav mode="side" opened>
+        <mat-sidenav mode="side" opened style= "background-color:rgb(186,213,171)">
            
           
                 <app-navbar></app-navbar>
