--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,20 +1,20 @@
 <mat-accordion>
-    <mat-expansion-panel style= "background-color:rgb(186,213,171)">
+    <mat-expansion-panel style= "background-color:rgb(186,213,171); font-size:2.0vw;">
       <mat-expansion-panel-header>
         <mat-panel-title>
          Menu Options
         </mat-panel-title>
       </mat-expansion-panel-header>
         <div class="button-row-a">
-        <a mat-raised-button routerLink="/accounts" style="width : 100%; background-color:rgb(233,167,119);">My Account</a>
-        <br>
-        <a mat-raised-button routerLink='/transfer' style="width : 100%; background-color:rgb(233,167,119);">Transfer</a>
-        <br>
-        <a mat-raised-button routerLink="." style="width : 100%; background-color:rgb(233,167,119);">Settings</a>
-        <br>
-         <a mat-raised-button routerLink="." style="width : 100%; background-color:rgb(233,167,119);">Contact Support</a>
-        <br>
-        <a mat-raised-button routerLink="/login" style="width : 100%; background-color:rgb(233,167,119);">Logout</a>
+        <a mat-raised-button routerLink="/accounts" class="navbarButton">My Account</a>
+        <br><br><br>
+        <a mat-raised-button routerLink='/transfer' class="navbarButton">Transfer</a>
+        <br><br><br>
+        <a mat-raised-button routerLink="." class="navbarButton">Settings</a>
+        <br><br><br>
+         <a mat-raised-button routerLink="." class="navbarButton">Contact Support</a>
+         <br><br><br>
+        <a mat-raised-button routerLink="/login" class="navbarButton">Logout</a>
         </div>
     </mat-expansion-panel>
 </mat-accordion>
