--- a/src/app/transfer/transfer.component.html
+++ b/src/app/transfer/transfer.component.html
@@ -1,24 +1,20 @@
 <div class="container">
 <mat-sidenav-container fullscreen>
-        <mat-sidenav mode="side" opened style= "background-color:rgb(186,213,171)">
+        <mat-sidenav mode="side" opened style= "background-color:rgb(186,213,171);width:20%;">
            
           
                 <app-navbar></app-navbar>
     
             </mat-sidenav>
         <mat-sidenav-content>
-
-
-                <h1>Hi</h1>
-                <p>Would You Like to Transfer Money to Another Account ?</p>
-
-             
+                <div class="outer">
+                        <div class="middle">
+                          <div class="inner">
+                            <div class="container">
                 <form [formGroup]="transferForm" (ngSubmit)="transferFormHandler()" >
 
-   
                         <div id="returnMessage" [innerHTML]="returnMessage" style="border: 1px red;"></div>
                       
-                        
                         <mat-form-field class="input-full-width">
                         <mat-label>Select an Account</mat-label>
                         <mat-select [(value)]="selected" formControlName="sender_account_number">
@@ -51,7 +47,7 @@
                         <input matInput formControlName="note" type ="note"  placeholder="Description" /></mat-form-field><br>
                     
                     
-                    <button mat-raised-button > Transfer</button>  
+                    <button mat-raised-button style="background-color:rgb(233,167,119);width:20%;font-size:2.0vw;" > Transfer</button>  
 
 
                     
@@ -66,7 +62,7 @@
 
 
                     </form>
-
+</div></div></div></div>
 
 
         </mat-sidenav-content>
