--- a/src/app/sign-in-form/sign-in-form.component.html
+++ b/src/app/sign-in-form/sign-in-form.component.html
@@ -16,7 +16,7 @@
                 <input matInput formControlName="password" type ="password"  placeholder="password" />
             </mat-form-field><br>
             
-            <button mat-raised-button style="background-color:rgb(233,167,119);">login</button><br />
+            <button mat-raised-button style="background-color:rgb(233,167,119);width:20%;font-size:2.0vw;">login</button><br />
             </form>
             
             
