--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,3 +1,5 @@
+<img src="../../assets/axle.png" alt="Axle Logo" style="width:100%;height:35%;">
+
 <mat-accordion>
     <mat-expansion-panel style= "background-color:rgb(186,213,171); font-size:2.0vw;">
       <mat-expansion-panel-header>
