began Settings and Support pages
the title

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -12,9 +12,9 @@
         <br><br><br>
         <a mat-raised-button routerLink='/transfer' class="navbarButton">Transfer</a>
         <br><br><br>
-        <a mat-raised-button routerLink="." class="navbarButton">Settings</a>
+        <a mat-raised-button routerLink="/settings" class="navbarButton">Settings</a>
         <br><br><br>
-         <a mat-raised-button routerLink="." class="navbarButton">Contact Support</a>
+         <a mat-raised-button routerLink="/support" class="navbarButton">Contact Support</a>
          <br><br><br>
         <a mat-raised-button routerLink="/login" class="navbarButton">Logout</a>
         </div>
