--- a/src/app/account/account.component.html
+++ b/src/app/account/account.component.html
@@ -1,8 +1,8 @@
 <table class="accountTable">
     <tr >
-<td>{{type}}</td>
-<td >{{Account.account_number}}</td>
-<td>${{Account.balance}}</td>
+<td style="width:25%; text-align: center;">{{type}}</td>
+<td style="width:50%; text-align: center;">{{Account.account_number}}</td>
+<td style="width:25%; text-align: right;">${{Account.balance}}</td>
 </tr>
 </table>
 
