--- a/src/app/my-account/my-account.component.html
+++ b/src/app/my-account/my-account.component.html
@@ -18,9 +18,9 @@
                             <div *ngIf="AccountList">         
                           <table class="accountTable" style=" background-color:rgb(233,167,119);">
                                   <tr>
-                                      <td>Account Type</td>
-                                      <td>Account Number</td>
-                                      <td>Balance</td>
+                                      <td style="width:25%; text-align: center;">Account Type</td>
+                                      <td style="width:50%; text-align: center;">Account Number</td>
+                                      <td style="width:25%; text-align: right;">Balance</td>
                                   </tr>
                                 </table>
                           
