--- a/src/app/my-account/my-account.component.css
+++ b/src/app/my-account/my-account.component.css
@@ -42,3 +42,10 @@
   width: 100%;
   /*whatever width you want*/
 }
+.returnMessage
+{
+ border: 1px solid red;
+ color:red;
+ font-size:2.0vw;
+ border-radius:20px;
+}
