--- a/src/app/my-account/my-account.component.html
+++ b/src/app/my-account/my-account.component.html
@@ -27,8 +27,15 @@
                                   </tr>
                                 </table>
                           
-                                  <div *ngFor= "let Account of CheckingAccounts"  >        
-                                   <app-account *ngIf="CheckingAccounts" [Account]="Account"></app-account>
+                                  <div *ngFor= "let Account of CheckingAccounts"  >  
+                                      <table  class="accountTable" *ngIf="Account">
+                                          <tr class="rowTable" (click)="getTransfers(Account)" >
+                                      <td style="width:25%; text-align: center;">{{Account.account_type}}</td>
+                                      <td style="width:50%; text-align: center;">{{Account.account_number}}</td>
+                                      <td style="width:25%; text-align: right;">${{Account.balance}}</td>
+                                      </tr>
+                                      </table>      
+
                                   </div>
                                            
                               </div>  
@@ -44,9 +51,21 @@
                                               <td style="width:25%; text-align: right;">Balance</td>
                                           </tr>
                                         </table>
-                                  
+
+
+                                        <!--
+<app-account *ngIf="SavingAccounts" [Account]="Account"></app-account>
+                                   <app-account *ngIf="CheckingAccounts" [Account]="Account"></app-account>
+                                        -->
                                           <div *ngFor= "let Account of SavingAccounts"  >        
-                                           <app-account *ngIf="SavingAccounts" [Account]="Account"></app-account>
+                                              <table class="accountTable" *ngIf="Account" >
+                                                  <tr class="rowTable" (click)="getTransfers(Account)" >
+                                              <td style="width:25%; text-align: center;">{{Account.account_type}}</td>
+                                              <td style="width:50%; text-align: center;">{{Account.account_number}}</td>
+                                              <td style="width:25%; text-align: right;">${{Account.balance}}</td>
+                                              </tr>
+                                              </table>
+                                           
                                           </div>
                                                    
                                       </div> 
@@ -54,6 +73,39 @@
                                       <div id="returnMessage" *ngIf="returnMessage" [innerHTML]="returnMessage" class="returnMessage" ></div>
                                       <br />
                                       <a mat-raised-button (click)="freezeAccounts()">Freeze Accounts </a>
+
+                                      <br /> <br/> <br />
+
+
+                                      
+                                      <div class="transactions" *ngIf="Transfers">
+                                        <h2> Transaction history for account: </h2> 
+                                        <h2>{{TransferAccount.account_number}}: ${{TransferAccount.balance}}</h2>
+                                        
+                                        <br /> <br />
+                                          <table class="accountTable" style=" background-color:rgb(233,167,119);">
+                                              <tr>
+                                                  <td style="width:25%; text-align: center;">sender account</td>
+                                                  <td style="width:25%; text-align: center;">recipient account</td>
+                                                  <td style="width:25%; text-align: right;">Amount</td>
+                                                  <td style="width:25%; text-align: center;">Note</td>
+                                              </tr>
+                                            </table>
+
+                                            <div *ngFor= "let Transfer of Transfers"  >        
+                                              
+                                                <table class="accountTable" >
+                                                    <tr class="rowTable"(click)="getTransactionDetails(Account)">
+                                                <td style="width:25%; text-align: center;">{{Transfer.sender_account_num}}</td>
+                                                <td style="width:25%; text-align: center;">{{Transfer.recipient_account_num}}</td>
+                                                <td style="width:25%; text-align: right;">${{Transfer.amount}}</td>
+                                                <td style="width:25%; text-align: center;">{{Transfer.note.substring(0,10)}}...</td>
+                                                </tr>
+                                                </table>
+
+                                               </div>
+
+                                      </div>
                             </div>
                        </div>
                     </div>
