--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -3,16 +3,40 @@
        <app-navbar></app-navbar>
     </mat-sidenav>
     <mat-sidenav-content>
-
         <div class="outer">
             <div class="middle">
               <div class="inner">
                 <div class="container">
-                    </div>
-              </div>
-            </div>
+                  <h1>Welcome to Settings<br>Please enter new infromation to be updated</h1>
+                  <p>
+                      <mat-form-field appearance="legacy" class="input-full-width">
+                        <mat-label>Password</mat-label>
+                        <input matInput placeholder="Enter a New Password">
+                      </mat-form-field>
+                    </p>
+                    <p> 
+                        <mat-form-field appearance="legacy" class="input-full-width">
+                          <mat-label>Income</mat-label>
+                          <input matInput placeholder="Enter your yearly income">
+                        </mat-form-field>
+                      
+                    </p>
+                    <p>
+                      <mat-form-field appearance="legacy" class="input-full-width">
+                          <mat-label>Telephone Number</mat-label>
+                          <input matInput placeholder="Enter a new Phone number">
+                        </mat-form-field>
+                      </p>
+                       
+                      <button mat-raised-button  style="background-color:rgb(233,167,119);width:35%;font-size:2.0vw;">Confrim</button>  
+
           </div>
-    
-    </mat-sidenav-content>
-  </mat-sidenav-container>
+        
+        </div>
+      </div>
+    </div>
+
+     
+     </mat-sidenav-content>
+ </mat-sidenav-container>
 
