--- a/src/app/support/support.component.html
+++ b/src/app/support/support.component.html
@@ -9,7 +9,7 @@
               <div class="inner">
                 <div class="container">
                     <h1>Contact Our Support Team!</h1>
-                    <body>If you feel that your account as been compromised please feel free to contact out support team at Support_Axle@banking.com
+                    <body>If you feel that your account as been compromised please feel free to contact our support team at Support_Axle@banking.com
                         or call toll free at (US) 1-(800)-123-4567, (International) 1-(888)-765-4321                    </body>
                     </div>
               </div>
